--- a/shop_details.html
+++ b/shop_details.html
@@ -108,7 +108,7 @@
         <li><strong>巴士:</strong> <span id="shop-bus"></span></li>
         <li><strong>步行:</strong> <span id="shop-walk"></span></li>
       </ul>
-      <a href="ptcg_map.html" class="text-blue-500 hover:underline mt-4 inline-block">返回地圖</a>
+      <a href="index.html" class="text-blue-500 hover:underline mt-4 inline-block">返回地圖</a>
     </div>
   </div>
   <script>
