--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             }
 
         #shop-list {
-            max-height: 100vh;
+            max-height: 800%;
             overflow-y: auto;
             background-color: #ffffff;
             border-top: 1px solid #ddd;
@@ -61,7 +61,7 @@
         }
 
         .shop-item {
-            padding: 10px;
+            padding: 30px;
             border-bottom: 1px solid #eee;
             cursor: pointer;
             transition: background-color 0.2s;
